Fixed horizontal content overflow on body selector

--- a/style/grid_style.css
+++ b/style/grid_style.css
@@ -17,7 +17,6 @@
 
 body {
   height: 100vh;
-  width: 100vw;
   font-family: "Red Hat Display", sans-serif;
   background-color: var(--p-purple);
 }
